# FunBAT

./: FunBAT_example.ipynb  README.md  pyproject.toml  run_example_FunBAT.ipynb
funbat/: Burden_fcts.py  FunBAT.py  data_preparation.py
scripts/: FunBAT.py  FunBurd.py  data_preparation.py
