[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "funbat"
version = "0.1.2"
description = "FunBAT: Compute the functional burden of a biological function for a phenotype."
readme = "README.md"
authors = [{ name = "Thomas Renne", email = "thomas.renne@umontreal.ca" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: Unix",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

keywords = ["Genetic associations", "Burden test", "Regression"]
dependencies = [
    'pandas',
    'joblib>=0.11'
]
requires-python = ">=3.10.4"

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/JacquemontLab/FunBAT"


[tool.setuptools]
packages = ["funbat"]